force-app/main/default/objects/Cash_Drawer_Item__c/Cash_Drawer_Item__c.object-meta.xml
<CustomObject>
    <label>Cash Drawer Item</label>
    <nameField>
        <displayFormat>CDI{0000}</displayFormat>
        <label>Cash Drawer Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Drawer Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>