force-app/main/default/objects/Cash_Drawer_Item__c/fields/Cash_Drawer_Session__c.field-meta.xml
<CustomField>
    <fullName>Cash_Drawer_Session__c</fullName>
    <label>Cash Drawer Session</label>
    <referenceTo>Cash_Drawer_Session__c</referenceTo>
    <relationshipName>Cash_Drawer_Bills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>