force-app/main/default/objects/Cash_Drawer_Item__c/fields/Custom__c.field-meta.xml
<CustomField>
    <fullName>Custom__c</fullName>
    <label>Custom</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>