force-app/main/default/objects/Cash_Drawer_Item__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cash Drawer Items</relationshipLabel>
    <relationshipName>Cash_Drawer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>