force-app/main/default/objects/Cash_Drawer_Item__c/fields/Loan_Advance__c.field-meta.xml
<CustomField>
    <fullName>Loan_Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan / Advance</label>
    <referenceTo>Loan_Advance__c</referenceTo>
    <relationshipLabel>Cash Drawer Items</relationshipLabel>
    <relationshipName>Cash_Drawer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>