force-app/main/default/objects/Cash_Drawer_Item__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Cash Drawer Items</relationshipLabel>
    <relationshipName>Cash_Drawer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>