force-app/main/default/objects/Cash_Drawer_Item__c/fields/Opportunity_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product</label>
    <referenceTo>OpportunityLineItem</referenceTo>
    <relationshipLabel>Cash Drawer Items</relationshipLabel>
    <relationshipName>Cash_Drawer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>