force-app/main/default/objects/Cash_Drawer_Item__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Cash Drawer Items</relationshipLabel>
    <relationshipName>Cash_Drawer_Items</relationshipName>
    <type>Lookup</type>
</CustomField>