force-app/main/default/objects/Cash_Drawer_Item__c/fields/Queue_Number__c.field-meta.xml
<CustomField>
    <fullName>Queue_Number__c</fullName>
    <formula>Opportunity__r.Queue_Number__c</formula>
    <label>Queue Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>