force-app/main/default/objects/Cash_Drawer_Item__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Additional Cash</fullName>
            </value>
            <value>
                <fullName>Ending Count</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Sales Gcash</fullName>
            </value>
            <value>
                <fullName>Withdrawal</fullName>
            </value>
            <value>
                <fullName>Pending Remittance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>