force-app/main/default/objects/Cash_Drawer_Item__c/fields/X1000__c.field-meta.xml
<CustomField>
    <fullName>X1000__c</fullName>
    <label>1000</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>