force-app/main/default/objects/Cash_Drawer_Item__c/fields/X100__c.field-meta.xml
<CustomField>
    <fullName>X100__c</fullName>
    <label>100</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>